radar-service/deployment/ui-deployment/radar-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radar-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radar-ui
  template:
    metadata:
      name: radar-ui
      labels:
        app: radar-ui
    spec:
      imagePullSecrets:
        - name: github-registry-token
      containers:
      - name: radar-ui
        image: docker.pkg.github.com/knoldus/radar/radar-ui:1.0.0
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 8
          periodSeconds: 5
          failureThreshold: 3
        ports:
          - containerPort: 80
      nodeSelector:
        nodetype: radar
