radar-service/deployment/ui-deployment/radar-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radar-ui
spec:
  type: ClusterIP
  selector:
    app: radar-ui
  ports:
    - name: traffic
      port: 80
      targetPort: 80
